Only overwrite DomKey of keydown event if it's a printable character

InputMethodWin will combine the WM_KEY* and WM_CHAR messages, and will
overwrite DomKey for |keydown| with the DomKey of |keypress|.

We want to only overwite it if the new DomKey is not a control
character.

BUG=601882

Review URL: https://codereview.chromium.org/1875763003

Cr-Commit-Position: refs/heads/master@{#386691}